// api/protobufs/review.proto

syntax = "proto3";

package review;

option go_package = "github.com/datngth03/ecommerce-go-app/pkg/client/review;review_client";

service ReviewService {
  // RPC to submit a new product review
  rpc SubmitReview (SubmitReviewRequest) returns (ReviewResponse);
  // RPC to get a review by its ID
  rpc GetReviewById (GetReviewByIdRequest) returns (ReviewResponse);
  // RPC to update an existing review
  rpc UpdateReview (UpdateReviewRequest) returns (ReviewResponse);
  // RPC to delete a review by its ID
  rpc DeleteReview (DeleteReviewRequest) returns (DeleteReviewResponse);
  // RPC to list reviews for a specific product
  rpc ListReviewsByProduct (ListReviewsByProductRequest) returns (ListReviewsResponse);
  // RPC to list all reviews (with optional filters/pagination)
  rpc ListAllReviews (ListAllReviewsRequest) returns (ListReviewsResponse);
}

// Common Review message
message Review {
  string id = 1;
  string product_id = 2;
  string user_id = 3;
  int32 rating = 4;
  string comment = 5;
  string created_at = 6;
  string updated_at = 7;
}

// SubmitReview RPC messages
message SubmitReviewRequest {
  string product_id = 1;
  string user_id = 2;
  int32 rating = 3;
  string comment = 4;
}
message ReviewResponse {
  Review review = 1;
}

// GetReviewById RPC messages
message GetReviewByIdRequest {
  string id = 1;
}

// UpdateReview RPC messages
message UpdateReviewRequest {
  string id = 1;
  int32 rating = 2;
  string comment = 3;
}

// DeleteReview RPC messages
message DeleteReviewRequest {
  string id = 1;
}
message DeleteReviewResponse {
  bool success = 1;
  string message = 2;
}

// ListReviewsByProduct RPC messages
message ListReviewsByProductRequest {
  string product_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

// ListAllReviews RPC messages
message ListAllReviewsRequest {
  string product_id = 1; // Optional filter
  string user_id = 2;    // Optional filter
  int32 min_rating = 3;  // Optional filter
  int32 limit = 4;
  int32 offset = 5;
}
message ListReviewsResponse {
  repeated Review reviews = 1;
  int64 total_count = 2;
}
